--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>Socials</h2>
     <div class="row">
 
-      <a href="https://www.linkedin.com/in/jmckinny/" style="text-decoration:none">
+      <a href="https://www.linkedin.com/in/jmckinny/" target="_blank" style="text-decoration:none">
         <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           viewBox="0 0 32 32" xml:space="preserve" fill="#000000" width="80px" height="80px">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -86,7 +86,7 @@
         </svg>
       </a>
 
-      <a href="https://github.com/jmckinny" style="text-decoration:none">
+      <a href="https://github.com/jmckinny" target="_blank" style="text-decoration:none">
         <svg fill="#000000" width="80px" height="80px" viewBox="0 0 32 32" version="1.1"
           xmlns="http://www.w3.org/2000/svg">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
