add animated background

--- a/index.html
+++ b/index.html
@@ -118,8 +118,14 @@
   </div>
 
 
+  <canvas class="background"></canvas>
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- Animated background -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+  <script src="scripts/background.js"></script>
+
 </body>
 
 </html>
