cleanup: add comments and cleanup css

--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
 
 
   <canvas class="background"></canvas>
-  <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- Animated background -->
+  <!-- End Document -->
 
+  <!-- Animated background -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
   <script src="scripts/background.js"></script>
 
