--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       <li>
         <strong><a href="https://github.com/jmckinny/frothybot">Discord Bot</a></strong>
       </li>
+      <li>
+        <strong><a href="projects/wasm-life/index.html">WASM Game of Life</a></strong>
+      </li>
     </ul>
 
 
