add link to wasm-life source code

--- a/projects/wasm-life/index.html
+++ b/projects/wasm-life/index.html
@@ -19,6 +19,7 @@
   <div id="fps"></div>
 
   <h1>Game of Life</h1>
+  <strong><a href="https://github.com/jmckinny/wasm-life" target="_blank">Source Code</a></strong>
 
   <div class="controls">
     <span>
