--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
       <li>
         <strong><a href="projects/wasm-life/index.html">WASM Game of Life</a></strong>
       </li>
+      <li>
+        <strong><a href="projects/minesvelte/index.html">Minesweeper in SvelteKit</a></strong>
+      </li>
     </ul>
 
 
