fix: switch path?

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <strong><a href="projects/wasm-life/index.html">WASM Game of Life</a></strong>
       </li>
       <li>
-        <strong><a href="projects/minesvelte/index.html">Minesweeper in SvelteKit</a></strong>
+        <strong><a href="projects/minesvelte/">Minesweeper in SvelteKit</a></strong>
       </li>
     </ul>
 
