fix: minesvelte fixes

--- a/projects/minesvelte/404.html
+++ b/projects/minesvelte/404.html
@@ -7,11 +7,11 @@
 	<title>Minesweeper</title>
 	<meta name="viewport" content="width=device-width" />
 
-	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/entry/start.tnss6lzt.js">
-	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/chunks/entry.Kz7oZKSq.js">
+	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/entry/start.rTSptsQR.js">
+	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/chunks/entry.CFYmR0rb.js">
 	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/chunks/scheduler.s4keOlH5.js">
 	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/chunks/index.M-qtvb0m.js">
-	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/entry/app.IPFO4fIG.js">
+	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/entry/app.BaRGgLDm.js">
 	<link rel="modulepreload" href="/projects/minesvelte/app/immutable/chunks/index.HxSdVWBd.js">
 </head>
 
@@ -19,7 +19,7 @@
 	<div style="display: contents">
 		<script>
 			{
-				__sveltekit_15mjtw9 = {
+				__sveltekit_1veiyot = {
 					base: "/projects/minesvelte",
 					assets: "/projects/minesvelte"
 				};
@@ -27,8 +27,8 @@
 				const element = document.currentScript.parentElement;
 
 				Promise.all([
-					import("/projects/minesvelte/app/immutable/entry/start.tnss6lzt.js"),
-					import("/projects/minesvelte/app/immutable/entry/app.IPFO4fIG.js")
+					import("/projects/minesvelte/app/immutable/entry/start.rTSptsQR.js"),
+					import("/projects/minesvelte/app/immutable/entry/app.BaRGgLDm.js")
 				]).then(([kit, app]) => {
 					kit.start(app, element);
 				});
