--- a/projects/minesvelte/index.html
+++ b/projects/minesvelte/index.html
@@ -9,15 +9,15 @@
 
 	<link href="./app/immutable/assets/0.QNtSrZMt.css" rel="stylesheet">
 	<link href="./app/immutable/assets/ProgressBar.oq5aOWfL.css" rel="stylesheet">
-	<link rel="modulepreload" href="./app/immutable/entry/start.tnss6lzt.js">
-	<link rel="modulepreload" href="./app/immutable/chunks/entry.Kz7oZKSq.js">
+	<link rel="modulepreload" href="./app/immutable/entry/start.rTSptsQR.js">
+	<link rel="modulepreload" href="./app/immutable/chunks/entry.CFYmR0rb.js">
 	<link rel="modulepreload" href="./app/immutable/chunks/scheduler.s4keOlH5.js">
 	<link rel="modulepreload" href="./app/immutable/chunks/index.M-qtvb0m.js">
-	<link rel="modulepreload" href="./app/immutable/entry/app.IPFO4fIG.js">
+	<link rel="modulepreload" href="./app/immutable/entry/app.BaRGgLDm.js">
 	<link rel="modulepreload" href="./app/immutable/chunks/index.HxSdVWBd.js">
 	<link rel="modulepreload" href="./app/immutable/nodes/0.Q0yyPBH3.js">
 	<link rel="modulepreload" href="./app/immutable/chunks/ProgressBar.svelte_svelte_type_style_lang.6R-F81MU.js">
-	<link rel="modulepreload" href="./app/immutable/nodes/2.z2UTeROz.js">
+	<link rel="modulepreload" href="./app/immutable/nodes/2.1a4lGfKl.js">
 </head>
 
 <body data-sveltekit-preload-data="hover" data-theme="skeleton">
@@ -278,7 +278,7 @@
 
 		<script>
 			{
-				__sveltekit_15mjtw9 = {
+				__sveltekit_1veiyot = {
 					base: new URL(".", location).pathname.slice(0, -1),
 					assets: "/projects/minesvelte"
 				};
@@ -288,8 +288,8 @@
 				const data = [null, null];
 
 				Promise.all([
-					import("./app/immutable/entry/start.tnss6lzt.js"),
-					import("./app/immutable/entry/app.IPFO4fIG.js")
+					import("./app/immutable/entry/start.rTSptsQR.js"),
+					import("./app/immutable/entry/app.BaRGgLDm.js")
 				]).then(([kit, app]) => {
 					kit.start(app, element, {
 						node_ids: [0, 2],
