fix: move discordbot link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <strong><a href="projects/ww2-bombing/index.html">WW2 Bombing Data Analysis</a></strong>
       </li>
       <li>
-        <strong><a href="https://github.com/jmckinny/frothybot">Discord Bot</a></strong>
+        <strong><a href="https://github.com/jmckinny/discordbot">Discord Bot</a></strong>
       </li>
       <li>
         <strong><a href="projects/wasm-life/index.html">WASM Game of Life</a></strong>
